panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__initialisation__test_braced_initialisation_of_array_of_char_ptr_with_string_literal.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/initialisation/test_braced_initialisation_of_array_of_char_ptr_with_string_literal.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/initialisation/test_braced_initialisation_of_array_of_char_ptr_with_string_literal.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition external
      main~1 `fn() -> int`
      (compound-statement
         (definition s~3 `array<ptr<char const>; 1>`
            (braced
               (subobject +0
                  (noop-type-conversion `ptr<char const>`
                     (noop-type-conversion `ptr<char>`
                        (addressof `ptr<array<char; 12>>`
                           (string `array<char; 12>` "hello world\0")))))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 4>>`
                        (string `array<char; 4>` "%s\n\0"))))
               (deref `ptr<char const>`
                  (ptr-add `ptr<ptr<char const>>`
                     (noop-type-conversion `ptr<ptr<char const>>`
                        (addressof `ptr<array<ptr<char const>; 1>>`
                           (s~3 `array<ptr<char const>; 1>`)))
                     (sign-extend `long` (0 `int`))))))
         (return (truncate `int` (lengthof `unsigned long` 1 (s~3 `array<ptr<char const>; 1>`)))))))

----- stderr -----
