panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__initialisation__test_braced_initialisation_of_char_ptr_with_string_literal.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/initialisation/test_braced_initialisation_of_char_ptr_with_string_literal.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/initialisation/test_braced_initialisation_of_char_ptr_with_string_literal.c"
   (declaration external strlen~0 `fn(∅: ptr<char const>) -> unsigned long` ∅)
   (function-definition external
      main~1 `fn() -> int`
      (compound-statement
         (definition s~3 `ptr<char const>`
            (braced
               (subobject +0
                  (noop-type-conversion `ptr<char const>`
                     (noop-type-conversion `ptr<char>`
                        (addressof `ptr<array<char; 4>>`
                           (string `array<char; 4>` "abc\0")))))))
         (return
            (truncate `int`
               (call `unsigned long`
                  (addressof `ptr<fn(∅: ptr<char const>) -> unsigned long>`
                     (strlen~0 `fn(∅: ptr<char const>) -> unsigned long`))
                  (s~3 `ptr<char const>`)))))))

----- stderr -----
