panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__initialisation__test_braced_initialisation_of_multidimensional_array_2.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/initialisation/test_braced_initialisation_of_multidimensional_array_2.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/initialisation/test_braced_initialisation_of_multidimensional_array_2.c"
   (declaration external memcmp~0 `fn(∅: ptr<void const>, ∅: ptr<void const>, ∅: unsigned long) -> int` ∅)
   (declaration external printf~1 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition external
      main~2 `fn() -> int`
      (compound-statement
         (definition actual~4 `array<array<array<int; 2>; 1>; 3>`
            (braced
               (subobject +0 (1 `int`))
               (subobject +4 (2 `int`))
               (subobject +8 (3 `int`))
               (subobject +16 (4 `int`))))
         (definition expected~5 `array<int; 6>`
            (braced
               (subobject +0 (1 `int`))
               (subobject +4 (2 `int`))
               (subobject +8 (3 `int`))
               (subobject +12 (0 `int`))
               (subobject +16 (4 `int`))
               (subobject +20 (0 `int`))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~1 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 9>>`
                        (string `array<char; 9>` "%zu %zu\n\0"))))
               (sizeof `unsigned long` 24 (actual~4 `array<array<array<int; 2>; 1>; 3>`))
               (sizeof `unsigned long` 24 (expected~5 `array<int; 6>`))))
         (return
            (call `int`
               (addressof `ptr<fn(∅: ptr<void const>, ∅: ptr<void const>, ∅: unsigned long) -> int>`
                  (memcmp~0 `fn(∅: ptr<void const>, ∅: ptr<void const>, ∅: unsigned long) -> int`))
               (noop-type-conversion `ptr<void const>`
                  (noop-type-conversion `ptr<array<array<int; 2>; 1>>`
                     (addressof `ptr<array<array<array<int; 2>; 1>; 3>>`
                        (actual~4 `array<array<array<int; 2>; 1>; 3>`))))
               (noop-type-conversion `ptr<void const>`
                  (noop-type-conversion `ptr<int>`
                     (addressof `ptr<array<int; 6>>`
                        (expected~5 `array<int; 6>`))))
               (sizeof `unsigned long` 24 (actual~4 `array<array<array<int; 2>; 1>; 3>`)))))))

----- stderr -----
